--- a/playerview/charcreation.html
+++ b/playerview/charcreation.html
@@ -28,15 +28,15 @@
 		<li>Elf</li>
 		<li>Dwarf</li>
 		</ul>
-		<h2 id="class">Class</h2>
+		<h2>Class</h2>
 		<ul>
 		<li>Any class</li>
 		</ul>
 		<h2 id="background">Background</h2>
 		<p>Your character has been a childhood friend with the other players&#39;s characters&#39;s, since childhood you&#39;ve been trouble makers, thieves, mercenaries then became soldiers and fought in the Great War where the last battle was won by your hands as revenge for the dragonborn killing your friend Garrick Stonefell. After the war ended you all vowed to stop all fighting and hid your weapons somewhere no one can find.</p>
-		<h2 id="what-you-have-to-do-go-for-the-background">What you have to do go for the background</h2>
+		<h2>What you have to do for the background</h2>
 		<ul>
-		<li>Where did you character go after the war?</li>
+		<li>Where did your character go after the war?</li>
 		<li>What did your character do for work?</li>
 		<li>Did your character get married? if yes does it have any kids?</li>
 		<li>Did it keep training? if yes was it in secret?</li>
