added rules and mechanics

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	</div>
 	<div class="buttondiv">
 		<button onclick="location='/playerview/index.html'">Player View</button>
+		<button onclick="location='/rules/index.html'">Rules</button>
 	</div>
 
 </body>
