--- a/rules/mechanics/general.html
+++ b/rules/mechanics/general.html
@@ -14,11 +14,12 @@
 		<a href="/index.html">
 			<img src="/pics/page_icons/d20_page.png" style="width:42px;height:42px;">
 		</a>
-		<h1 style="margin: 0; font-size: 1.5em">Mechanics</h1>
+		<h1 style="margin: 0; font-size: 1.5em">General</h1>
 	</div>
-	<div class="buttondiv">
-		<button onclick="location='/rules/mechanics/general.html'">General</button>
-		<button onclick="location='/rules/mechanics/weapontiering.html'">Weapon Tiering</button>
+	<div>
+		<ul>
+			<li>Elves and Dwarves age as fast as Humans do</li>
+		</ul>
 	</div>
 
 </body>
